# autojac

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
doc/: Doxyfile.in  mainpage.dox
include/autojac/: cppad_error_handling.h  dense_jacobian_code_gen.h  dense_jacobian_symbolic.h  function_generation_util.h  sparse_jacobian_code_gen.h  sparse_jacobian_symbolic.h  sparsity_pattern_handler.h  types.h
scripts/: install_cppad_and_cppadcg.sh
src/: cppad_error_handling.cpp  dense_jacobian_code_gen.cpp  dense_jacobian_symbolic.cpp  function_generation_util.cpp  sparse_jacobian_code_gen.cpp  sparse_jacobian_symbolic.cpp  sparsity_pattern_handler.cpp
test/src/: dense_jacobian_code_gen_test.cpp  dense_jacobian_symbolic_test.cpp  sparse_jacobian_code_gen_test.cpp  sparse_jacobian_symbolic_test.cpp
